Added download link and updated instructions.

--- a/Backend/myapp/templates/home.html
+++ b/Backend/myapp/templates/home.html
@@ -82,12 +82,26 @@
       <ul>
         <li>Dr. Anoop Jacob Thomas – Principal Investigator</li>
         <li>Atharva Sanjay More – Research Intern</li>
+        <li>Akram - Research Intern </li>
+        <li>Aswin - Research Intern </li>
+        <li>Harsha - Research Intern </li>
+        <li>Mahitha - Research Intern </li>
+        <li>Neel Amit Shah - Research Intern </li>
+        <li>Srinidhi - Research Intern </li>
+        <li>Virendra Panchal - Research Intern </li>
       </ul>
     </section>
 
     <section>
+      <h2>Contributers</h2>
+      <ul>
+      <li>Utkarsh Verma</li>
+      </ul>
+    </section>
+      
+    <section>
       <h2>Extension Setup Instructions</h2>
-      <h3>1. Clone or extract the repo</h3>
+      <h3>1. Download the extension from the <a href="https://github.com/am-3/HealthRumours/releases">release</a> </h3>
       <pre><code>unzip extension.zip
 cd extension</code></pre>
 
